--- a/index.html
+++ b/index.html
@@ -155,6 +155,37 @@
                             </div>
                         </div>
                         <div class="galleryBox__section">
+                            <img src="assets/21.jpg">
+                            <div class="info-box">
+                                <div class="info-box__disabled">
+                                    <div class="info-box__name">
+                                        <h2 class="img-tag">
+                                            OctoSkull
+                                        </h2>
+                                        <span class="info-arrow">
+                                            ▲
+                                        </span>
+                                    </div>
+                                    <div class="categories">
+                                        <div class="categories-info">
+                                            <p>
+                                                Style: Sketch
+                                            </p>
+                                            <p>
+                                                Author: HeavyMonster
+                                            </p>
+                                            <p>
+                                                Date: 15/02/21
+                                            </p>
+                                            <p>
+                                                Colors: #000, #111, #fff, WG3, WG5, WG7
+                                            </p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="galleryBox__section">
                             <img src="assets/2.jpg">
                             <div class="info-box">
                                 <div class="info-box__disabled">
