--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
                                 <div class="info-box__disabled">
                                     <div class="info-box__name">
                                         <h2 class="img-tag">
-                                            OctoSkull
+                                            Hunter
                                         </h2>
                                         <span class="info-arrow">
                                             ▲
@@ -175,10 +175,10 @@
                                                 Author: HeavyMonster
                                             </p>
                                             <p>
-                                                Date: 15/02/21
+                                                Date: 24/07/21
                                             </p>
                                             <p>
-                                                Colors: #000, #111, #fff, WG3, WG5, WG7
+                                                Colors: #000, #111, #fff, WG3, WG5, WG7, CG4, CG2
                                             </p>
                                         </div>
                                     </div>
