--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                     </div>
                     <div class="galleryBox">
                         <div class="galleryBox__section">
-                            <img src="assets/1.jpg">
+                            <img src="assets/1.png">
                             <div class="info-box">
                                 <div class="info-box__disabled">
                                     <div class="info-box__name">
@@ -155,7 +155,7 @@
                             </div>
                         </div>
                         <div class="galleryBox__section">
-                            <img src="assets/21.jpg">
+                            <img src="assets/21.png">
                             <div class="info-box">
                                 <div class="info-box__disabled">
                                     <div class="info-box__name">
@@ -186,7 +186,7 @@
                             </div>
                         </div>
                         <div class="galleryBox__section">
-                            <img src="assets/2.jpg">
+                            <img src="assets/2.png">
                             <div class="info-box">
                                 <div class="info-box__disabled">
                                     <div class="info-box__name">
@@ -217,7 +217,7 @@
                             </div>
                         </div>
                         <div class="galleryBox__section">
-                            <img src="assets/3.jpg">
+                            <img src="assets/3.png">
                             <div class="info-box">
                                 <div class="info-box__disabled">
                                     <div class="info-box__name">
@@ -248,7 +248,7 @@
                             </div>
                         </div>
                         <div class="galleryBox__section">
-                            <img src="assets/4.jpg">
+                            <img src="assets/4.png">
                             <div class="info-box">
                                 <div class="info-box__disabled">
                                     <div class="info-box__name">
@@ -279,7 +279,7 @@
                             </div>
                         </div>
                         <div class="galleryBox__section">
-                            <img src="assets/5.jpg">
+                            <img src="assets/5.png">
                             <div class="info-box">
                                 <div class="info-box__disabled">
                                     <div class="info-box__name">
@@ -310,7 +310,7 @@
                             </div>
                         </div>
                         <div class="galleryBox__section">
-                            <img src="assets/6.jpg">
+                            <img src="assets/6.png">
                             <div class="info-box">
                                 <div class="info-box__disabled">
                                     <div class="info-box__name">
@@ -341,7 +341,7 @@
                             </div>
                         </div>
                         <div class="galleryBox__section">
-                            <img src="assets/7.jpg">
+                            <img src="assets/7.png">
                             <div class="info-box">
                                 <div class="info-box__disabled">
                                     <div class="info-box__name">
@@ -372,7 +372,7 @@
                             </div>
                         </div>
                         <div class="galleryBox__section">
-                            <img src="assets/18.jpg">
+                            <img src="assets/18.png">
                             <div class="info-box">
                                 <div class="info-box__disabled">
                                     <div class="info-box__name">
@@ -403,7 +403,7 @@
                             </div>
                         </div>
                         <div class="galleryBox__section">
-                            <img src="assets/8.jpg">
+                            <img src="assets/8.png">
                             <div class="info-box">
                                 <div class="info-box__disabled">
                                     <div class="info-box__name">
@@ -434,7 +434,7 @@
                             </div>
                         </div>
                         <div class="galleryBox__section">
-                            <img src="assets/9.jpg">
+                            <img src="assets/9.png">
                             <div class="info-box">
                                 <div class="info-box__disabled">
                                     <div class="info-box__name">
@@ -465,7 +465,7 @@
                             </div>
                         </div>
                         <div class="galleryBox__section">
-                            <img src="assets/10.jpg">
+                            <img src="assets/10.png">
                             <div class="info-box">
                                 <div class="info-box__disabled">
                                     <div class="info-box__name">
@@ -496,7 +496,7 @@
                             </div>
                         </div>
                         <div class="galleryBox__section">
-                            <img src="assets/11.jpg">
+                            <img src="assets/11.png">
                             <div class="info-box">
                                 <div class="info-box__disabled">
                                     <div class="info-box__name">
@@ -527,103 +527,7 @@
                             </div>
                         </div>
                         <div class="galleryBox__section">
-                            <img src="assets/12.jpg">
-                            <div class="info-box">
-                                <div class="info-box__disabled">
-                                    <div class="info-box__name">
-                                        <h2 class="img-tag">
-                                            Classmates
-                                        </h2>
-                                        <span class="info-arrow">
-                                            ▲
-                                        </span>
-                                    </div>
-                                    <div class="categories">
-                                        <div class="categories-info">
-                                            <p>
-                                                Style: Doodle, MonsterDoodle
-                                            </p>
-                                            <p>
-                                                Author: HeavyMonster
-                                            </p>
-                                            <p>
-                                                Date: 24/12/20
-                                            </p>
-                                            <p>
-                                                Colors: #000, #fff
-                                            </p>
-                                            <p>
-                                                Drawing Time: 00/00/00
-                                            </p>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="galleryBox__section">
-                            <img src="assets/13.jpg">
-                            <div class="info-box">
-                                <div class="info-box__disabled">
-                                    <div class="info-box__name">
-                                        <h2 class="img-tag">
-                                            Merry Death
-                                        </h2>
-                                        <span class="info-arrow">
-                                            ▲
-                                        </span>
-                                    </div>
-                                    <div class="categories">
-                                        <div class="categories-info">
-                                            <p>
-                                                Style: Vintage
-                                            </p>
-                                            <p>
-                                                Author: HeavyMonster
-                                            </p>
-                                            <p>
-                                                Date: 27/11/20
-                                            </p>
-                                            <p>
-                                                Colors: #000, #111, #fff, WG3, WG5, WG7, DarkBlueLight, ChestnutBrown, PotatoBrown
-                                            </p>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="galleryBox__section">
-                            <img src="assets/14.jpg">
-                            <div class="info-box">
-                                <div class="info-box__disabled">
-                                    <div class="info-box__name">
-                                        <h2 class="img-tag">
-                                            The Busket List
-                                        </h2>
-                                        <span class="info-arrow">
-                                            ▲
-                                        </span>
-                                    </div>
-                                    <div class="categories">
-                                        <div class="categories-info">
-                                            <p>
-                                                Style: Vintage
-                                            </p>
-                                            <p>
-                                                Author: HeavyMonster
-                                            </p>
-                                            <p>
-                                                Date: 22/11/20
-                                            </p>
-                                            <p>
-                                                Colors: #000, #111, #222, #fff, VividRed, WineRed, WG3, WG5, WG7
-                                            </p>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="galleryBox__section">
-                            <img src="assets/15.jpg">
+                            <img src="assets/15.png">
                             <div class="info-box">
                                 <div class="info-box__disabled">
                                     <div class="info-box__name">
@@ -654,7 +558,7 @@
                             </div>
                         </div>
                         <div class="galleryBox__section">
-                            <img src="assets/16.jpg">
+                            <img src="assets/16.png">
                             <div class="info-box">
                                 <div class="info-box__disabled">
                                     <div class="info-box__name">
@@ -685,7 +589,7 @@
                             </div>
                         </div>
                         <div class="galleryBox__section">
-                            <img src="assets/17.jpg">
+                            <img src="assets/17.png">
                             <div class="info-box">
                                 <div class="info-box__disabled">
                                     <div class="info-box__name">
@@ -716,7 +620,7 @@
                             </div>
                         </div>
                         <div class="galleryBox__section">
-                            <img src="assets/19.jpg">
+                            <img src="assets/19.png">
                             <div class="info-box">
                                 <div class="info-box__disabled">
                                     <div class="info-box__name">
@@ -747,7 +651,7 @@
                             </div>
                         </div>
                         <div class="galleryBox__section">
-                            <img src="assets/20.jpg">
+                            <img src="assets/20.png">
                             <div class="info-box">
                                 <div class="info-box__disabled">
                                     <div class="info-box__name">
