--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                     </div>
                     <div class="galleryBox">
                         <div class="galleryBox__section">
-                            <img src="assets/1.png">
+                            <img src="assets/1.jpg">
                             <div class="info-box">
                                 <div class="info-box__disabled">
                                     <div class="info-box__name">
@@ -155,7 +155,7 @@
                             </div>
                         </div>
                         <div class="galleryBox__section">
-                            <img src="assets/21.png">
+                            <img src="assets/21.jpg">
                             <div class="info-box">
                                 <div class="info-box__disabled">
                                     <div class="info-box__name">
@@ -186,7 +186,7 @@
                             </div>
                         </div>
                         <div class="galleryBox__section">
-                            <img src="assets/2.png">
+                            <img src="assets/2.jpg">
                             <div class="info-box">
                                 <div class="info-box__disabled">
                                     <div class="info-box__name">
@@ -217,7 +217,7 @@
                             </div>
                         </div>
                         <div class="galleryBox__section">
-                            <img src="assets/3.png">
+                            <img src="assets/3.jpg">
                             <div class="info-box">
                                 <div class="info-box__disabled">
                                     <div class="info-box__name">
@@ -248,7 +248,7 @@
                             </div>
                         </div>
                         <div class="galleryBox__section">
-                            <img src="assets/4.png">
+                            <img src="assets/4.jpg">
                             <div class="info-box">
                                 <div class="info-box__disabled">
                                     <div class="info-box__name">
@@ -279,7 +279,7 @@
                             </div>
                         </div>
                         <div class="galleryBox__section">
-                            <img src="assets/5.png">
+                            <img src="assets/5.jpg">
                             <div class="info-box">
                                 <div class="info-box__disabled">
                                     <div class="info-box__name">
@@ -310,7 +310,7 @@
                             </div>
                         </div>
                         <div class="galleryBox__section">
-                            <img src="assets/6.png">
+                            <img src="assets/6.jpg">
                             <div class="info-box">
                                 <div class="info-box__disabled">
                                     <div class="info-box__name">
@@ -341,7 +341,7 @@
                             </div>
                         </div>
                         <div class="galleryBox__section">
-                            <img src="assets/7.png">
+                            <img src="assets/7.jpg">
                             <div class="info-box">
                                 <div class="info-box__disabled">
                                     <div class="info-box__name">
@@ -372,7 +372,7 @@
                             </div>
                         </div>
                         <div class="galleryBox__section">
-                            <img src="assets/18.png">
+                            <img src="assets/18.jpg">
                             <div class="info-box">
                                 <div class="info-box__disabled">
                                     <div class="info-box__name">
@@ -403,7 +403,7 @@
                             </div>
                         </div>
                         <div class="galleryBox__section">
-                            <img src="assets/8.png">
+                            <img src="assets/8.jpg">
                             <div class="info-box">
                                 <div class="info-box__disabled">
                                     <div class="info-box__name">
@@ -434,7 +434,7 @@
                             </div>
                         </div>
                         <div class="galleryBox__section">
-                            <img src="assets/9.png">
+                            <img src="assets/9.jpg">
                             <div class="info-box">
                                 <div class="info-box__disabled">
                                     <div class="info-box__name">
@@ -465,7 +465,7 @@
                             </div>
                         </div>
                         <div class="galleryBox__section">
-                            <img src="assets/10.png">
+                            <img src="assets/10.jpg">
                             <div class="info-box">
                                 <div class="info-box__disabled">
                                     <div class="info-box__name">
@@ -496,7 +496,7 @@
                             </div>
                         </div>
                         <div class="galleryBox__section">
-                            <img src="assets/11.png">
+                            <img src="assets/11.jpg">
                             <div class="info-box">
                                 <div class="info-box__disabled">
                                     <div class="info-box__name">
@@ -527,7 +527,7 @@
                             </div>
                         </div>
                         <div class="galleryBox__section">
-                            <img src="assets/15.png">
+                            <img src="assets/15.jpg">
                             <div class="info-box">
                                 <div class="info-box__disabled">
                                     <div class="info-box__name">
@@ -558,7 +558,7 @@
                             </div>
                         </div>
                         <div class="galleryBox__section">
-                            <img src="assets/16.png">
+                            <img src="assets/16.jpg">
                             <div class="info-box">
                                 <div class="info-box__disabled">
                                     <div class="info-box__name">
@@ -589,7 +589,7 @@
                             </div>
                         </div>
                         <div class="galleryBox__section">
-                            <img src="assets/17.png">
+                            <img src="assets/17.jpg">
                             <div class="info-box">
                                 <div class="info-box__disabled">
                                     <div class="info-box__name">
@@ -620,7 +620,7 @@
                             </div>
                         </div>
                         <div class="galleryBox__section">
-                            <img src="assets/19.png">
+                            <img src="assets/19.jpg">
                             <div class="info-box">
                                 <div class="info-box__disabled">
                                     <div class="info-box__name">
@@ -651,7 +651,7 @@
                             </div>
                         </div>
                         <div class="galleryBox__section">
-                            <img src="assets/20.png">
+                            <img src="assets/20.jpg">
                             <div class="info-box">
                                 <div class="info-box__disabled">
                                     <div class="info-box__name">
