--- a/index.html
+++ b/index.html
@@ -619,7 +619,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="galleryBox__section">
+                        <!-- <div class="galleryBox__section">
                             <img src="assets/19.jpg">
                             <div class="info-box">
                                 <div class="info-box__disabled">
@@ -644,6 +644,37 @@
                                             </p>
                                             <p>
                                                 Colors: #000, #fff
+                                            </p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div> -->
+                        <div class="galleryBox__section">
+                            <img src="assets/22.jpg">
+                            <div class="info-box">
+                                <div class="info-box__disabled">
+                                    <div class="info-box__name">
+                                        <h2 class="img-tag">
+                                            Glitch
+                                        </h2>
+                                        <span class="info-arrow">
+                                            ▲
+                                        </span>
+                                    </div>
+                                    <div class="categories">
+                                        <div class="categories-info">
+                                            <p>
+                                                Style: Glitch
+                                            </p>
+                                            <p>
+                                                Author: HeavyMonster
+                                            </p>
+                                            <p>
+                                                Date: 01/09/21
+                                            </p>
+                                            <p>
+                                                Colors: #000, #fff, LemonYellow, CoralRed, VividPink, VividGreen, BrilliantBlue, SkyBlue
                                             </p>
                                         </div>
                                     </div>
